Content Security Policy nonce support
- Move CSP related classes from server.commons to security module.
- Add BlockAllContentSecurityPolicy.
- Rename ContentSecurityPolicy to ConfigurableContentSecurityPolicy.
- Add ContentSecurityPolicy class as empty builder.
- Move CSP related constants to ContentSecurityPolicy class.
- CSP hardening
  - Block-all-csp for REST
  - Use nonce for html entry points (disables 'unsafe-inline')
- HtmlField: Provide SessionNonce for Scout classic which will be
  replaced with the real nonce before sending to the browser
- Hold nonce in Scout JS (App) and Scout classic (UiSession)
- Support specific CSP rules for BinaryResources in each BrowserField
- Adds scout.cspDirectiveAppend property
- Adds possibility for CSP properties to be restricted to html entry
  points
- Add IWebResourceResponseInterceptorContributor to customize the http
  response headers for resources

440473